<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ifpi.edu.br.calculadora.Tela3Activity">

    <EditText
        android:id="@+id/edt_peso1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/peso_da_nota_1"
        android:inputType="number"/>

    <EditText
        android:id="@+id/edt_peso2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/peso_da_nota_2"
        android:inputType="number"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:onClick="calculaMediaPonderada"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:onClick="cancelar"/>

</LinearLayout>
