<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ifpi.edu.br.calculadora.Tela2Activity">

    <EditText
        android:id="@+id/edt_nota1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nota_1"
        android:inputType="number"/>

    <EditText
        android:id="@+id/edt_nota2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nota_2"
        android:inputType="number"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular_media"
        android:onClick="calculaMedia"/>

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
